# MemoMind

./: .gitattributes  .gitignore  LICENSE  PACKAGE_NOTES.md  README.md  build.gradle.kts  exfiles_download.txt  gradle.properties  settings.gradle.kts
ai/mnn/: build.gradle.kts  consumer-rules.pro
ai/mnn/src/main/cpp/: CMakeLists.txt  native_mnn_bridge.cpp
ai/modelmanager/: build.gradle.kts
ai/orchestrator/: build.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
artifacts/releases/2026-06-07/: MemoMind-debug-2026-06-07.apk.part-aa  MemoMind-debug-2026-06-07.apk.part-ab  README.md  (+4 more)
bridge/: .env.example  README.md  project_registry.example.json
bridge/memomind_agent_bridge/: __init__.py  __main__.py  config.py  doctor.py  main.py  models.py  router.py  status.py  supabase_client.py
bridge/scripts/: bridge_status.sh  codex_cli_healthcheck.sh  install_launch_agent.sh  uninstall_launch_agent.sh
core/database/: build.gradle.kts
core/filesystem/: build.gradle.kts
core/network/: build.gradle.kts
docs/: 01-产品蓝图.md  02-技术方案.md  03-启动清单.md  04-MNN与模型接入说明.md  05-真实模型接入步骤.md  06-Qwen模型来源与选型.md  07-MemoMind创意方案.md  agent-bridge-mvp.md  真机闭环验收表.docx
feature/capture/: build.gradle.kts
feature/history/: build.gradle.kts
feature/home/: build.gradle.kts
feature/result/: build.gradle.kts
gradle/: libs.versions.toml
scripts/: build_device_acceptance_checklist_doc.py  build_mnn_android.sh  export_qwen_mnn.sh  install_mnn_prebuilt.sh  link_qwen_model_dir.sh  setup_mnn_arm64.sh
supabase/migrations/: 001_agent_tasks.sql  002_agent_tasks_request_header_auth.sql
(+46 files in other folders)
